--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -309,7 +309,7 @@ header.top {
 }
 
 header.top h1 {
-  font-size: 14.4rem;
+  font-size: 2.4rem;
   line-height: 0.7;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -326,20 +326,22 @@ header.top h1 .ofThe {
   font-size: 3rem;
   color: #f5a623;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  // background: url("images/anchor.svg") center no-repeat;
+  -ms-flex-align: center;
+  align-items: center;
+  background: url('../styles/css/images/anchor.svg') center no-repeat;
   background-size: cover;
   padding: 0 1rem;
 }
+
 header.top h1 .ofThe .of {
   padding-right: 2rem;
   position: relative;
   right: -0.5rem;
 }
+
 header.top h3 {
   margin: 0;
   font-size: 2rem;
@@ -347,6 +349,7 @@ header.top h3 {
   position: relative;
   display: inline-block;
 }
+
 header.top h3 span {
   background: #fff;
   position: relative;
@@ -354,8 +357,9 @@ header.top h3 span {
   padding-left: 1rem;
   padding-right: 1rem;
 }
-header.top h3:before,
-header.top h3:after {
+
+header.top h3::before,
+header.top h3::after {
   display: block;
   z-index: 1;
   background: #000;
@@ -363,13 +367,15 @@ header.top h3:after {
   width: 130%;
   height: 1px;
   content: '';
-  top: 5px;
+  top: 15px;
   margin-left: -15%;
 }
-header.top h3:after {
+
+header.top h3::after {
   top: auto;
-  bottom: 7px;
+  bottom: 14px;
 }
+
 .catch-of-the-day {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -378,14 +384,15 @@ header.top h3:after {
   max-width: 1500px;
   margin: 5vh auto 0;
   -webkit-perspective: 1000px;
-          perspective: 1000px;
+  perspective: 1000px;
   -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
+  transform-style: preserve-3d;
 }
+
 .catch-of-the-day > * {
   -webkit-box-flex: 1;
-      -ms-flex: 1 4 auto;
-          flex: 1 4 auto;
+  -ms-flex: 1 4 auto;
+  flex: 1 4 auto;
   padding: 2rem;
   border: 1rem double #1a1a1a;
   position: relative;
@@ -395,6 +402,7 @@ header.top h3:after {
   box-shadow: 0 5px 5px rgba(0,0,0,0.1);
   overflow: scroll;
 }
+
 .catch-of-the-day > *:first-child {
   -ms-flex-negative: 1;
       flex-shrink: 1;
